Bug 168627 - PDF export dialog crashes when horizontal tabs are enabled
Summary: PDF export dialog crashes when horizontal tabs are enabled
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Vertical-Tab-dialogs
  Show dependency treegraph
 
Reported: 2025-09-30 21:57 UTC by Michael Weghorn
Modified: 2025-10-01 14:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2025-09-30 21:57:58 UTC
Steps to reproduce:

1) start LibreOffice (not using the gtk3 VCL plugin on Linux)
2) in "Tools" -> "Options" -> "LibreOfficDev" -> "Appearance", section "Dialogs", set "Tab position" to "Horizontal on top"
3) confirm using "OK"
4) "File" -> "Export As" -> "Export As PDF"

-> Crash

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eb88769b907a3e0e4c92f6310970d4e5fe32f75b
CPU threads: 32; OS: Linux 6.16; UI render: default; VCL: x11
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eb88769b907a3e0e4c92f6310970d4e5fe32f75b
CPU threads: 32; OS: Linux 6.16; UI render: default; VCL: qt6 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Michael Weghorn 2025-09-30 22:12:49 UTC
The fact that the dialog's .ui file currently uses GtkBox objects for the tab children also prevents supporting native Qt Widgets for that dialog for the Qt based VCL plugins.
Comment 2 nobu 2025-10-01 03:17:19 UTC
Reproducible with Writer
[2025-09-29]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0d986755e4153230670c820dc52cc40cd72dfa87
CPU threads: 4; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded
Comment 3 Heiko Tietze 2025-10-01 09:41:46 UTC
Obviously I missed in bug 167105 to convert the dialog into the new tab-less style.
Comment 4 Commit Notification 2025-10-01 11:59:52 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f80d35be727356af596d44d7f79cc4a20adb21da

Resolves tdf#168627 - UI-less tab style for PDF export dialog

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Weghorn 2025-10-01 14:11:49 UTC
Thanks!

Fix verified with

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f80d35be727356af596d44d7f79cc4a20adb21da
CPU threads: 32; OS: Linux 6.16; UI render: default; VCL: x11
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded