Resolves tdf#168627 - UI-less tab style for PDF export dialog

Change-Id: Ib9f5d5bf3fddd18d234f69d3fb8dbb8d20f10a1b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191714
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins